fix(searchbar): fix searchbar on mobile version

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -58,7 +58,7 @@
 
 .inputPhoto{
  border-radius: 50px;
- min-width: 30rem;
+ max-width: 30rem;
  border-color: rgb(109, 143, 238);
  background-color: rgb(34, 31, 31);
  text-align: center;
@@ -94,5 +94,9 @@
     display: flex;
     margin-top: 5rem;
     border-radius: 20px;
-}
+  }
+
+  .inputPhoto {
+    width: 70%;
+  }
 }
